--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -6,6 +6,9 @@ Author's name
 Some description of the CSS styling
 
 */
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 #bod{
 /*position:absolute;
 left:600px;
@@ -22,19 +25,62 @@ margin:50px 50px 0 0;
 }
 
 div{
-display: inline-block;
+
+margin: 0 auto;
+margin-top: 150px;
+     width: 100px;
+font-family: 'Source Sans Pro';
+text-align: center;
   /*box-sizing: border-box;*/
 }
 
 button{
 margin-top:150px;
+background-color: #7b886b; /* Green */
+ border: none;
+ color: white;
+ padding: 16px 32px;
+ font-family:'Roboto Slab';
+ text-align: center;
+ text-decoration: none;
+ display: inline-block;
+ font-size: 16px;
+ margin: 4px 2px;
+ -webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ cursor: pointer;
 
 
 }
+
+button:hover{
+
+  background-color: #94ddbc;
+color: white;
+}
+
+
+
+body{
+background-color: #88bb92;
+
+
+}
+
+/*#command{
+
+  margin: 0 auto;
+      width: 100px;
+}*/
+
+
+
+
+
 /*--------DIV STUFFFFFFF------*/
-.talk{
+/*.talk{*/
 /*color:red;*/
-background-color: red;
+/*background-color: red;
 height:300px;
 width:300px;
 display:inline-block;
@@ -81,4 +127,4 @@ background-color: blue;
   display:inline-block;
 
 
-}
+}*/
