--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -24,11 +24,17 @@ margin:50px 50px 0 0;
 
 }
 
+#basket{
+border:10px solid black;
+height:400px;
+
+}
+
 div{
 
 margin: 0 auto;
 margin-top: 250px;
-     width: 100px;
+     width: 300px;
 font-family: 'Source Sans Pro';
 text-align: center;
 font-size: 20px;
