--- a/assignment2/css/style.css
+++ b/assignment2/css/style.css
@@ -36,6 +36,25 @@ height:400px;
   height: 100px;
 }
 
+#essay{
+
+  width:600px;
+  text-align: left;
+  text-indent: inherit;
+  text-indent: 40px;
+}
+
+#bib{
+
+  font-style: oblique;
+}
+
+.bibby{
+
+  font-size: 15px;
+  text-indent:0px;
+}
+
 div{
 
 margin: 0 auto;
